Fix contact form and menu on mobile

--- a/src/components/ContactForm/ContactForm.module.css
+++ b/src/components/ContactForm/ContactForm.module.css
@@ -24,11 +24,10 @@
 }
 
 .subtitle {
-  font-size: 20px;
-  line-height: 1.4;
-  font-weight: 200;
+  font-family: 'Montserrat', sans-serif;
   color: rgba(255, 255, 255, 0.8);
   margin-bottom: 40px;
+  font-weight: 200;
 }
 
 .form {
@@ -39,13 +38,26 @@
 }
 
 .inputGroup {
+  width: 65%;
+  margin-right: 5%;
+}
+
+.inputRow {
+  display: flex;
+  margin-bottom: 40px;
+  gap: 50px;
+}
+
+.inputItem {
+  border-bottom: 2px solid #BA9778;
   position: relative;
+  max-width: 300px;
   flex: 1;
-  max-width: 400px;
 }
 
 .input {
   width: 100%;
+  font-family: 'Montserrat', sans-serif;
   background-color: transparent;
   border: none;
   padding: 10px 0;
@@ -77,13 +89,14 @@
 }
 
 .submitButton {
+  font-family: 'Montserrat', sans-serif;
   padding: 15px 20px;
   background-color: #cbb18b;
   color: #222;
   border: none;
   cursor: pointer;
-  font-size: 16px;
-  font-weight: 500;
+  font-size: 20px;
+  font-weight: 300;
   transition: background-color 0.3s;
   width: 260px;
   text-align: center;
@@ -162,11 +175,22 @@
     flex-direction: column;
     gap: 30px;
   }
-  
+
   .inputGroup {
-    max-width: 100%;
+    width: 100%;
+    margin: 0;
   }
   
+  .inputRow {
+    flex-direction: column;
+    gap: 30px;
+  }
+  
+  .inputItem {
+    width: 100%;
+    max-width: unset;
+  }
+
   .submitButton {
     width: 100%;
   }
